{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 105,
  "lineage": "2906a9e7-9655-bdf1-3885-a4dfa734bc06",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-04221ccf87221a029",
            "public_dns": "ec2-15-207-147-58.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.147.58",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myin1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000cbce3e1b899ebd",
            "arn": "arn:aws:ec2:ap-south-1:386123244177:instance/i-0d461bdca8f04ef68",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d461bdca8f04ef68",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02252f6fa20bd7fc4",
            "private_dns": "ip-192-168-0-114.ap-south-1.compute.internal",
            "private_ip": "192.168.0.114",
            "public_dns": "ec2-15-206-123-213.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.123.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0812779ede76f092c",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05dc7cd78069f2b51",
            "tags": {
              "Name": "MyWordpressInstance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-082916ad9b5f0a61c"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.mygw",
            "aws_key_pair.Key",
            "aws_security_group.newgrp1",
            "aws_subnet.public_sub",
            "aws_vpc.myvpc",
            "tls_private_key.privateKey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myin2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0732b62d310b80e97",
            "arn": "arn:aws:ec2:ap-south-1:386123244177:instance/i-02ca20c0c58f8d196",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02ca20c0c58f8d196",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0730f51d4758b942f",
            "private_dns": "ip-192-168-0-152.ap-south-1.compute.internal",
            "private_ip": "192.168.0.152",
            "public_dns": "ec2-15-206-81-50.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.81.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05b2d552a6109bd7c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05dc7cd78069f2b51",
            "tags": {
              "Name": "MyBastionHostInstance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fbb0cda109811e8b"
            ]
          },
          "dependencies": [
            "aws_key_pair.Key",
            "aws_security_group.newgrp2",
            "aws_subnet.public_sub",
            "aws_vpc.myvpc",
            "tls_private_key.privateKey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myin3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08706cb5f68222d09",
            "arn": "arn:aws:ec2:ap-south-1:386123244177:instance/i-0e7dcb75ccf90b387",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e7dcb75ccf90b387",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fb55462d72c4ad76",
            "private_dns": "ip-192-168-1-176.ap-south-1.compute.internal",
            "private_ip": "192.168.1.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e28f6ea4abaa4d30",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e35ddd082f62e0b6",
            "tags": {
              "Name": "MySQLInstance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-027a9754cd36967bb"
            ]
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_key_pair.Key",
            "aws_nat_gateway.natgw",
            "aws_security_group.newgrp1",
            "aws_security_group.newgrp2",
            "aws_security_group.newgrp3",
            "aws_subnet.private_sub",
            "aws_subnet.public_sub",
            "aws_vpc.myvpc",
            "tls_private_key.privateKey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mygw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:386123244177:internet-gateway/igw-016e51f67b0a7583b",
            "id": "igw-016e51f67b0a7583b",
            "owner_id": "386123244177",
            "tags": {
              "Name": "MyIGW"
            },
            "vpc_id": "vpc-04c643d651c65ca0d"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04221ccf87221a029",
            "id": "nat-0c5e60e76820a7bdf",
            "network_interface_id": "eni-0e1293a694c9b10cc",
            "private_ip": "192.168.0.4",
            "public_ip": "15.207.147.58",
            "subnet_id": "subnet-05dc7cd78069f2b51",
            "tags": {
              "Name": "Natgateway"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public_sub",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d80571a16850dae9",
            "owner_id": "386123244177",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-016e51f67b0a7583b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myroute1"
            },
            "vpc_id": "vpc-04c643d651c65ca0d"
          },
          "dependencies": [
            "aws_internet_gateway.mygw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03a64c7e8a06a7e44",
            "owner_id": "386123244177",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c5e60e76820a7bdf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myroute2"
            },
            "vpc_id": "vpc-04c643d651c65ca0d"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_subnet.public_sub",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_ass1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01131e42b9527bb40",
            "route_table_id": "rtb-0d80571a16850dae9",
            "subnet_id": "subnet-05dc7cd78069f2b51"
          },
          "dependencies": [
            "aws_internet_gateway.mygw",
            "aws_route_table.route1",
            "aws_subnet.public_sub",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_ass2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055dd1aa14f8c4f4a",
            "route_table_id": "rtb-03a64c7e8a06a7e44",
            "subnet_id": "subnet-0e35ddd082f62e0b6"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.route2",
            "aws_subnet.private_sub",
            "aws_subnet.public_sub",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "newgrp1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:386123244177:security-group/sg-082916ad9b5f0a61c",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082916ad9b5f0a61c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "MySecGrp1",
            "name_prefix": "",
            "owner_id": "386123244177",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MySecGrp1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c643d651c65ca0d"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "newgrp2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:386123244177:security-group/sg-0fbb0cda109811e8b",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fbb0cda109811e8b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "MySecGrp2",
            "name_prefix": "",
            "owner_id": "386123244177",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MySecGrp2"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c643d651c65ca0d"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "newgrp3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:386123244177:security-group/sg-027a9754cd36967bb",
            "description": "Allow Mysql inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027a9754cd36967bb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-082916ad9b5f0a61c"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fbb0cda109811e8b"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "MySecGrp3",
            "name_prefix": "",
            "owner_id": "386123244177",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MySecGrp3"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c643d651c65ca0d"
          },
          "dependencies": [
            "aws_security_group.newgrp1",
            "aws_security_group.newgrp2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:386123244177:subnet/subnet-0e35ddd082f62e0b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0e35ddd082f62e0b6",
            "map_public_ip_on_launch": false,
            "owner_id": "386123244177",
            "tags": {
              "Name": "subnet2"
            },
            "vpc_id": "vpc-04c643d651c65ca0d"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:386123244177:subnet/subnet-05dc7cd78069f2b51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-05dc7cd78069f2b51",
            "map_public_ip_on_launch": true,
            "owner_id": "386123244177",
            "tags": {
              "Name": "subnet1"
            },
            "vpc_id": "vpc-04c643d651c65ca0d"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:386123244177:vpc/vpc-04c643d651c65ca0d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-02a745b99502801ac",
            "default_route_table_id": "rtb-0afaccdc00f5c4f22",
            "default_security_group_id": "sg-0f35a27189f09cff1",
            "dhcp_options_id": "dopt-a35ea6c8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04c643d651c65ca0d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0afaccdc00f5c4f22",
            "owner_id": "386123244177",
            "tags": {
              "Name": "myvpc"
            }
          }
        }
      ]
    }
  ]
}